[workspace]
members = [
    "rlobkit-core",
    "rlobkit-dialogs",
    "rlobkit-image",
    "rlobkit-app-events",
]
resolver = "3"

[workspace.package]
version = "0.5.1"
edition = "2024"
authors = ["mlm-games"]
license = "MIT"
description = "Partially cross-platform file-picking toolkit"
repository = "https://github.com/mlm-games/rlobkit"
homepage = "https://github.com/mlm-games/rlobkit"

[workspace.dependencies]
rlobkit-core = { version = "^0", path = "rlobkit-core" }
