[package]
name = "rlobkit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
async-trait = "0.1"
bytes = "1"
mime_guess = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"
tokio = { version = "1", features = ["fs", "io-util"], optional = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["dep:tokio"]
