[package]
name = "rlobkit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = "2"
bytes = "1"
mime_guess = "2"
dirs = "6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "rt"], optional = true }

[features]
default = ["tokio-runtime"]
tokio-runtime = ["dep:tokio"]
