[package]
name = "rlobkit-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rlobkit-core = { path = "../rlobkit-core" }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
bytes = "1"
thiserror = "2"
