[package]
name = "rlobkit-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rlobkit-core.workspace = true
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
bytes = "1"
